<resources>
    <string name="app_name">SK Cash &amp; Cary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_updateprofile">Update Profile</string>
    <string name="menu_changepassword">Change Password</string>
    <string name="change_lang">Change App Language</string>
    <string name="menu_myorder">My Orders</string>
    <string name="euro">&#8364;</string>
    <string name="home_second">Home Second</string>
    <string name="menu_rate">Rate our app</string>
    <string name="cart">Cart List</string>
    <string name="no_pro">No Product Found</string>
    <string name="weight_v">Weight</string>
    <string name="choose">Choose Your Language</string>
    <string name="begin">Change Language</string>
    <string name="register">Create Your Account</string>
    <string name="shareapp">Share our app with your friends and family for using our best services </string>
    <string name="sharecode">Share this Playstore app link</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="share">Share</string>
    <string name="Change_Language">Change Language</string>
    <string name="language_english">English</string>
    <string name="language_spnaish">Spanish</string>
    <string name="logout">Logout</string>

    <string name="login">LOGIN</string>
    <string name="don_t">Do not have an account ?</string>
    <string name="emailalready">The email has already been taken.</string>
    <string name="signup">SIGNUP</string>
    <string name="valid_phone">Enter Correct Phone Number </string>
    <string name="fullname">Full Name</string>
    <string name="fullnamerequired">Enter Full Name</string>

    <string name="repassword">Confirm Password</string>
    <string name="phone">Mobile Number</string>
    <string name="business">Post Code</string>
    <string name="address"> Delivery Address</string>
    <string name="alreadyhave">Already have an account ? </string>
    <string name="order_by">Order ID</string>
    <string name="detail">Details</string>
    <string name="total_bill">Total Bill</string>
    <string name="total_quantity">Status</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="productincart">Products in Cart</string>
    <string name="billdetail">Bill Detail</string>
    <string name="subtotal">Sub Total: </string>
    <string name="shippingcost">Shipping Cost: </string>
    <string name="discount">Discount: </string>
    <string name="total">Total: </string>
    <string name="checkout">Submit Order</string>

    <string name="product_detail">Product Detail</string>
    <string name="description">Description:</string>
    <string name="brand">Brand: </string>
    <string name="price">Price: </string>
    <string name="weight">Weight: </string>
    <string name="size">Size: </string>
    <string name="instock">In Stock: </string>
    <string name="intransit">In Transit: </string>
    <string name="viewbasket">View Basket</string>
    <string name="logut">You are leaving the application login session .... \nAre you sure ?</string>
    <string name="search">Search Your Products</string>
    <string name="categories">Categories</string>
    <string name="seeall">See All</string>
    <string name="products">Products</string>
    <string name="add">Add</string>

    <string name="newpass">New Password</string>
    <string name="didsomeone">Did someone forgot their password?</string>
    <string name="thats">That is ok...</string>
    <string name="just">Enter the email address you used to create your account and we will email you a link to reset your password</string>
    <string name="emailid">Email ID</string>
    <string name="checkemail">Send Email</string>
    <string name="enternew">Enter your new password below \nWe are just being extra careful</string>
    <string name="retype">Retype Password</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="update_profile">Update User Profile</string>
    <string name="update_proifle_text">Update Profile</string>
    <string name="chec">Checkout</string>
    <string name="paynow">Place order</string>
    <string name="keep">Keep me logged in</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="order_heading">Order Placed!</string>
    <string name="sucessfully">Your order has been placed successfully.\nFor more details, View My  Orders</string>
    <string name="toast">Language change successfully</string>
    <string name="successmessage">Your Order Placed Sucessfully</string>
    <string name="logout_text">Are You Sure You Want to Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="checkout_text">Cash On Delivery</string>
    <string name="cannot">cant add less than 0</string>
    <string name="maxquantity">
        can not add more than 5000 quantity </string>
    <string name="already">Product Already added in the cart</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>

    <string name="Fetching">Fetching Data</string>
    <string name="Submitting_Order">Submitting Order</string>
    <string name="pleasewait">Please Wait</string>
    <string name="validating_Email">Checking Email</string>

    <string name="date">Date</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="lo">Getting Detail.....</string>
    <string name="prod_detail">Product Detail</string>
    <string name="gettingorder">Getting Your Orders....</string>
    <string name="updatingpassword">Updating Password...</string>
    <string name="fetching_data">Fetching Data....</string>
    <string name="updating_profile">Updating Profile Data...</string>


    <string name="fill_all">Fill All Required Fields First</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_correct_email">Enter Correct Email </string>
    <string name="enter_passsword">Enter Password</string>
    <string name="enter_correct_password">Password length should be minimum 8 characters</string>
    <string name="areyousure">Are you sure you want to close this application?</string>
    <string name="closeapp">Close Application</string>
    <string name="full_name_correct">Full name should be minimum 3 characters</string>
    <string name="password_not_match">Password do not match</string>
    <string name="correct_mobile_number">Enter Correct Mobile Number 9 Characters</string>
    <string name="business_name">Enter Business Name </string>
    <string name="correct_business">Business Name should be of 5 Word </string>
    <string name="post_name"> Post Code </string>
    <string name="correct_post">Post Code should be of 5 digits </string>

    <string name="enter_address">Enter Address</string>
    <string name="correct_address">Address should be minimum 6 characters</string>
    <string name="email_not_exist">Email ID Does Not Exist</string>
    <string name="check">Check Your Email Reset Password Link Has Been Sent....</string>
    <string name="noitem">There is no item in cart</string>
    <string name="nomore">No more product</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_id">Order Id #</string>
    <string name="p_name">Name :</string>
    <string name="p_price">Price :</string>
    <string name="p_quantity">Quantity :</string>
    <string name="p_date">Date :</string>
    <string name="business_namee">Business Name</string>
    <string name="business_correct">Business Name Should be of  6 Charcters Minimum</string>
    <string name="sub_total">Sub Total :</string>
    <string name="cannotplace">Can Not Place Order</string>
    <string name="addto">Add to Cart</string>
    <string name="goback">Go Back</string>

    <string name="add_to_cart">Add to Cart</string>
    <string name="offer_name">"Offer Name : "</string>
    <string name="offer_price">"Offer Price : " </string>
    <string name="desc">"Description : "</string>
    <string name="not_selected_yet">Not Selected yet</string>
    <string name="city">City</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>


</resources>
