<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:imeOptions="actionNext"
            android:maxLines="1"

            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="#a6a6a6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:maxLines="1"

            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="#a6a6a6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_Password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvrepassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/repassword"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@android:color/black"
                android:textColorHint="#a6a6a6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/business"
            android:imeOptions="actionNext"
            android:maxLines="1"


            android:singleLine="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="#a6a6a6" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="2"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textColorHint="#a6a6a6" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">


            <Button
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_background"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyhave"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="@dimen/_16ssp"
                android:textColor="#6597f3" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>