<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_newpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/update_pf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/update_profile"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/fullname"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvaddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvBusiness"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/business_namee"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPostCode"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/post_name"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#63000000"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_Done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"
            android:background="@drawable/login_button_background"
            android:text="@string/update_proifle_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</ScrollView>
