<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Forgot Password Layout -->
            <LinearLayout
                android:id="@+id/layout_forgot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp"
                    android:textStyle="bold"
                    android:text="@string/didsomeone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="center_horizontal"
                    android:text="@string/thats" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/just" />
                <!-- Email -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:hint="@string/hint_email"
                        android:textColorHint="@android:color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textCapWords"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_CheckEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_forgot"
                    android:text="@string/checkemail"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <!-- Change Password Layout -->
            <LinearLayout
                android:id="@+id/layout_newpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/newpas" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/newpass"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/enternew" />
                <!-- New Password -->

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/newpass"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <!-- New Confirm Password -->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/retype"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_Done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="#6747cc"
                    android:text="@string/update_password"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18dp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>